[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/Blaster/Blaster.gd" type="Script" id=1]

[node name="Blaster" type="Node2D"]
script = ExtResource( 1 )

[node name="Fire_Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Bullet_Root" type="Node2D" parent="."]

[connection signal="timeout" from="Fire_Timer" to="." method="_on_Fire_Timer_timeout"]
